--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <ul class="navlist">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#portfolio">Conatact</a></li>
             <!-- <li><a href="#contact">Contact</a></li> -->
         </ul>
 
@@ -148,9 +148,9 @@
     </section> -->
 
     <!-- portfolio -->
-    <section class="portfolio" id="portfolio">
+    <section class="projects" id="projects">
         <div class="center-text" data-aos="fade-down">
-            <h2>My <span>Portfolio</span></h2>
+            <h2>My <span>Projects</span></h2>
         </div>
 
         <div class="Portfolio-content" data-aos="zoom-in-up">
