--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#portfolio">Conatact</a></li>
+            <li><a href="#portfolio">Contact</a></li>
             <!-- <li><a href="#contact">Contact</a></li> -->
         </ul>
 
