--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </p>                    
                 </div>
 
-                <a href="#" class="btn">View All Projects</a>
+                <a href="#projects" class="btn">View All Projects</a>
         </div>
     </section>
 
