--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
 
             <div class="main-btn">
-                <a href="https://drive.google.com/file/d/1JwnJ7RxPd1zOjM6HWo0znZOyGqU6aIlw/view?usp=drive_link" class="btn btn2" target="_blank" class="btn">Download CV</a>
+                <a href="https://drive.google.com/file/d/1wrzG75jps0jzoPQ1ie6EN4dpya80tSnd/view?usp=sharing" class="btn btn2" target="_blank" class="btn">Download CV</a>
                 <!-- <a href="#">Download CV</a> -->
             </div>
         </div>
