--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
 
             <div class="main-btn">
-                <a href="https://drive.google.com/file/d/1wrzG75jps0jzoPQ1ie6EN4dpya80tSnd/view?usp=sharing" class="btn btn2" target="_blank" class="btn">Download CV</a>
+                <a href="https://drive.google.com/file/d/1wrzG75jps0jzoPQ1ie6EN4dpya80tSnd/view?usp=drive_link" class="btn btn2" target="_blank" class="btn">Download CV</a>
                 <!-- <a href="#">Download CV</a> -->
             </div>
         </div>
@@ -92,7 +92,7 @@
 
                     <p class="exp">
                         Email ID:
-                        <span>awesome8somnath@gmail.com</span>
+                        <span>choudhurysomnath2000@gmail.com</span>
                     </p>
 
                     <p class="exp">
@@ -180,6 +180,21 @@
                 <h4>Object Detection app using Python</h4>
             </div>
 
+            <div class="row">
+                <img src="img/port-6.jpg" alt="">
+                <div class="main-row">
+                    <div class="row-text">
+                        <h5>Smart Lab Automation</h5>
+                    </div>
+                    <div class="row-icon">
+                        <i class="ri-github-fill"></i>
+                    </div>
+                </div>
+                <h4>To implement autonomous IoT Lab features such as lighting, ventilation</h4>
+            </div>
+
+            
+
             <!-- <div class="row">
                 <img src="img/port-2.jpg" alt="">
                 <div class="main-row">
@@ -252,6 +267,26 @@
                 <h3>Winner of IoT Shala Event Sem 5</h3>
                 <p>Team won first place</p>
                 <a href="https://drive.google.com/file/d/1HIF_-1NRWtsGoBgkHJK3QCk_J48kHEZ9/view?usp=sharing" target="_blank">
+                    See Now
+                    <i class="ri-arrow-right-line"></i>
+                </a>
+            </div>
+
+            <div class="box">
+                <img src="img/icons8-certificate-100.png" alt="">
+                <h3>Winner of Idea Manthan 2.0</h3>
+                <p>Our team ProTechTor won first place. Cash Prize of Rs. 50000 was awarded to us.</p>
+                <a href="https://drive.google.com/drive/folders/12OjXgGFXORoXG4AkYv9l_Jg17nygNsK6?usp=sharing" target="_blank">
+                    See Now
+                    <i class="ri-arrow-right-line"></i>
+                </a>
+            </div>
+
+            <div class="box">
+                <img src="img/icons8-certificate-100.png" alt="">
+                <h3>Got featured on University's official Instagram Page</h3>
+                <p>We got featured on Chandigarh University's official Instagram page. </p>
+                <a href="https://www.instagram.com/p/C1UJ5N-Pb9F/?img_index=2" target="_blank">
                     See Now
                     <i class="ri-arrow-right-line"></i>
                 </a>
