--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                     <p class="exp">
                         Phone No.
-                        <span>(+91) 8210311586</span>
+                        <span>(+91) 821-0311586</span>
                     </p>                    
                 </div>
 
